--- a/_config.yml
+++ b/_config.yml
@@ -73,6 +73,8 @@ author:
 
 # Publication Category - The following the list of publication categories and their headings
 publication_category:
+  thesis:
+    title: 'thesis'
   books:
     title: 'Books'
   manuscripts:
