--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,14 +17,14 @@ main:
   - title: "Teaching"
     url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Software"
+    url: /software/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  - title: "People"
+    url: /people/
     
-  - title: "CV"
-    url: /cv/
+  - title: "Contact"
+    url: /contact/
     
   # - title: "CV"
   #   url: /cv-json/
