--- a/_config.yml
+++ b/_config.yml
@@ -82,6 +82,7 @@ publication_category:
   conferences:
     title: 'Conference Articles'
 
+
 # Site Settings
 teaser                   :  # filename of teaser fallback teaser image placed in /images/ for social media previews
 breadcrumbs              : false # true, false (default)
@@ -224,6 +225,17 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
+  software:
+    output: true
+    permalink: /:collection/:path/
+  people:
+    output: true
+    permalink: /:collection/:path/
+  contact:
+    output: true
+    permalink: /:collection/:path/
+      
+
 
 
 # These settings control how pages and collections are included in the site
