--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "dbenkhalifa/dbenkhalifa.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "IMG_1627.JPG"
+  avatar           : "dorra.jpg"
   name             : "Dorra Ben Khalifa"
   pronouns         : # example: "she/her"  
   bio              : "Associate Professor"
