--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -5,5 +5,5 @@ Name Name:
   uri         : "https://dbenkhalifa.github.io/"
   email       : "dorra.ben-khalifa@enac.fr"
   bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  avatar      : "dorra.jpg"
  
